[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/gdtrees/UI/Editor3D/Editor3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/gdtrees/UI/Widgets/InputSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/gdtrees/UI/Main.gd" type="Script" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
tree_editor_path = NodePath("VBoxContainer/Editor3D")
context_menu_path = NodePath("ContextMenu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="FileButton" type="MenuButton" parent="VBoxContainer/Menu"]
margin_right = 72.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 0 )
text = "File"
flat = false
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save as", null, 0, false, false, 3, 0, null, "", false ]
switch_on_hover = true

[node name="EditButton" type="MenuButton" parent="VBoxContainer/Menu"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 20.0
rect_min_size = Vector2( 72, 0 )
focus_mode = 2
text = "Edit"
flat = false
switch_on_hover = true

[node name="SettingsButton" type="MenuButton" parent="VBoxContainer/Menu"]
margin_left = 152.0
margin_right = 215.0
margin_bottom = 20.0
text = "Settings"
flat = false
items = [ "Enable shadows", null, 1, true, false, 0, 0, null, "", false, "Rotate sun", null, 1, false, false, 1, 0, null, "", false, "Light settings", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Menu"]
margin_left = 219.0
margin_right = 223.0
margin_bottom = 20.0

[node name="Filename" type="Label" parent="VBoxContainer/Menu"]
margin_left = 227.0
margin_right = 227.0
margin_bottom = 20.0
mouse_filter = 1
size_flags_vertical = 1
valign = 1

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Menu"]
margin_left = 231.0
margin_right = 235.0
margin_bottom = 20.0

[node name="Editor3D" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
editing_options = [ "Curves", "Trunk radius scaling", "Branch size scaling", "Branch X rotation", "Branch Y rotation", "Branch Z rotation" ]

[node name="ContextMenu" type="PopupMenu" parent="."]
margin_right = 100.0
margin_bottom = 100.0

[node name="OpenFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.tres", "*.res" )

[node name="SaveFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Save Tree"
filters = PoolStringArray( "*.tres", "*.res" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenameFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Rename file"
filters = PoolStringArray( "*.tres", "*.res" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePopup" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -125.0
margin_right = 250.0
margin_bottom = 125.0
window_title = "Save?"

[node name="VBoxContainer" type="VBoxContainer" parent="SavePopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="MarginContainer" parent="SavePopup/VBoxContainer"]
margin_right = 500.0
margin_bottom = 123.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="SavePopup/VBoxContainer/Container"]
margin_top = 54.0
margin_right = 500.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Save your tree?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SavePopup/VBoxContainer"]
margin_top = 127.0
margin_right = 500.0
margin_bottom = 250.0
size_flags_vertical = 3
alignment = 1

[node name="DoSave" type="Button" parent="SavePopup/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_top = 51.0
margin_right = 200.0
margin_bottom = 71.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Save"

[node name="NoSave" type="Button" parent="SavePopup/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_top = 51.0
margin_right = 283.0
margin_bottom = 71.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Don't save"

[node name="CancelSave" type="Button" parent="SavePopup/VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_top = 51.0
margin_right = 341.0
margin_bottom = 71.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[node name="LightSettings" type="WindowDialog" parent="."]
anchor_left = 0.347
anchor_top = 0.403
anchor_right = 0.653
anchor_bottom = 0.597
margin_left = 0.171997
margin_top = 0.199982
margin_right = -0.172058
margin_bottom = -0.200012
window_title = "Light settings"

[node name="VBoxContainer" type="VBoxContainer" parent="LightSettings"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="MarginContainer" parent="LightSettings/VBoxContainer"]
margin_right = 313.0
margin_bottom = 84.0
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="LightSettings/VBoxContainer/Container"]
margin_left = 8.0
margin_top = 8.0
margin_right = 305.0
margin_bottom = 76.0

[node name="LightEnergy" parent="LightSettings/VBoxContainer/Container/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 297.0
margin_bottom = 44.0
label = "Light energy"
value = 1.0
max_value = 100.0
step = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="LightSettings/VBoxContainer/Container/VBoxContainer"]
margin_top = 48.0
margin_right = 297.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="LightSettings/VBoxContainer/Container/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 146.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Light color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="LightSettings/VBoxContainer/Container/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 297.0
margin_bottom = 20.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="HBoxContainer" type="HBoxContainer" parent="LightSettings/VBoxContainer"]
margin_top = 88.0
margin_right = 313.0
margin_bottom = 116.0
size_flags_vertical = 3
alignment = 1

[node name="ApplyLight" type="Button" parent="LightSettings/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_top = 4.0
margin_right = 151.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Apply"

[node name="CancelLight" type="Button" parent="LightSettings/VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_top = 4.0
margin_right = 209.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[connection signal="data_changed" from="VBoxContainer/Editor3D" to="." method="_on_data_changed"]
[connection signal="load_tree_data" from="VBoxContainer/Editor3D" to="." method="_on_Editor3D_load_tree_data"]
[connection signal="file_selected" from="OpenFile" to="." method="_on_file_open"]
[connection signal="file_selected" from="SaveFile" to="." method="_on_file_save"]
[connection signal="file_selected" from="RenameFile" to="." method="_on_file_rename"]
[connection signal="pressed" from="SavePopup/VBoxContainer/HBoxContainer/DoSave" to="." method="_on_DoSave_pressed"]
[connection signal="pressed" from="SavePopup/VBoxContainer/HBoxContainer/NoSave" to="." method="_on_NoSave_pressed"]
[connection signal="pressed" from="SavePopup/VBoxContainer/HBoxContainer/CancelSave" to="." method="_on_CancelSave_pressed"]
[connection signal="button_up" from="LightSettings/VBoxContainer/HBoxContainer/ApplyLight" to="." method="_on_ApplyLight_button_up"]
[connection signal="button_up" from="LightSettings/VBoxContainer/HBoxContainer/CancelLight" to="." method="_on_CancelLight_button_up"]
